Add SONAR_SCANNER_OPTS to resolve Java 17 compatibility issues